[project]
name = "provenance-guard"
version = "0.1.0"
description = ""
authors = [
    {name = "Unheat",email = "anbi2682006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.0.0)",
    "flask-limiter (>=3.5.0)",
    "groq (==0.15.0)",
    "python-dotenv (==1.0.1)",
    "nltk (>=3.9.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
